WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56847
WebKit2: Cannot make a selection past the end of the visible page (no autoscrolling)
https://bugs.webkit.org/show_bug.cgi?id=56847
Summary
WebKit2: Cannot make a selection past the end of the visible page (no autoscr...
Sam Weinig
Reported
2011-03-22 11:17:45 PDT
WebKit2: Cannot make a selection past the end of the visible page (no autoscrolling)
Attachments
Patch
(2.00 KB, patch)
2011-03-22 11:19 PDT
,
Sam Weinig
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2011-03-22 11:19:19 PDT
Created
attachment 86482
[details]
Patch
Adam Roben (:aroben)
Comment 2
2011-03-22 11:24:44 PDT
Comment on
attachment 86482
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=86482&action=review
> Source/WebKit2/Shared/mac/WebEventFactory.mm:45 > + if (!pressedMouseButtons) > + return WebMouseEvent::NoButton; > + if (pressedMouseButtons == 1 << 0) > + return WebMouseEvent::LeftButton; > + if (pressedMouseButtons == 1 << 1) > + return WebMouseEvent::RightButton;
Surprising that there aren't constants for these!
Adele Peterson
Comment 3
2011-04-06 17:53:07 PDT
Fixed in
r81679
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug