WebKit2: Cannot make a selection past the end of the visible page (no autoscrolling) <rdar://problem/8823874> https://bugs.webkit.org/show_bug.cgi?id=56847

Reviewed by Adam Roben.

* Shared/mac/WebEventFactory.mm:
(WebKit::currentMouseButton):
(WebKit::mouseButtonForEvent):
Add mouse button for mouseEnter/Exit events. [NSEvent buttonNumber] doesn't seem to give the right result
for these events, but getting the currentMouseButton does work.



git-svn-id: svn://svn.chromium.org/blink/trunk@81679 bbb929c8-8fbe-4397-9dbb-9b2b20218538